# anacor

./: README.md  exercicio_1_perfil_aplicacao.ipynb  exercicio_2_perfil_aplicacao_civil.ipynb  exercicio_3_estudantes.ipynb  exercicio_4_gestao_likert.ipynb  exercicio_5_coracao.ipynb  pyproject.toml
